--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,7 @@ h6 {
   width: 100%;
 }
 
-.nav-menu li.buy-tickets a {
+.nav-menu li.register a {
   color: #fff;
   background: #066742;
   padding: 7px 22px;
@@ -333,12 +333,12 @@ h6 {
   font-size: 13px;
 }
 
-.nav-menu li.buy-tickets a:hover {
+.nav-menu li.register a:hover {
   background: none;
 }
 
-.nav-menu li.buy-tickets:hover a:before,
-.nav-menu li.buy-tickets.menu-active a:before {
+.nav-menu li.register:hover a:before,
+.nav-menu li.register.menu-active a:before {
   visibility: hidden;
 }
 
@@ -488,7 +488,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #intro {
   width: 100%;
   height: 100vh;
-  background: url('https://res.cloudinary.com/shellmates-club/image/upload/v1607620797/bsides_site/10_pfpf14.jpg')
+  background: url('https://res.cloudinary.com/shellmates-club/image/upload/v1641035907/bsides_site/Banner_firfnh.png')
     top center;
     /* https://res.cloudinary.com/shellmates-club/image/upload/v1606911315/bsides_site/intro-bg-2_emnfda.png */
   background-size: cover;
@@ -496,15 +496,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   position: relative;
 }
 
-#intro:before {
-  content: "";
-  background: rgba(35, 31, 32, 0.8);
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-}
 
 #intro .intro-container {
   position: absolute;
@@ -1180,6 +1171,83 @@ body.mobile-nav-active #mobile-nav-toggle {
 #about .about-btn:hover {
   background: #1d8e62;
 }
+
+/*--------------------------------------------------------------
+# Buy Tickets Section
+--------------------------------------------------------------*/
+
+#registration {
+  padding: 60px 0;
+}
+
+#registration .card {
+  border: none;
+  border-radius: 5px;
+  transition: all  0.3s ease-in-out;
+  box-shadow: 0 10px 25px 0 rgba(6, 12, 34, 0.1);
+}
+
+#registration .card:hover {
+  box-shadow: 0 10px 35px 0 rgba(6, 12, 34, 0.2);
+}
+
+#registration .card hr {
+  margin: 25px 0;
+}
+
+#registration .card .card-title {
+  margin: 10px 0;
+  font-size: 14px;
+  letter-spacing: 1px;
+  font-weight: bold;
+}
+
+#registration .card .card-price {
+  font-size: 48px;
+  margin: 0;
+}
+
+#registration .card ul li {
+  margin-bottom: 20px;
+}
+
+#registration .card .text-muted {
+  opacity: 0.7;
+}
+
+#registration .card .btn {
+  font-size: 15px;
+  border-radius: 50px;
+  padding: 10px 40px;
+  transition: all 0.2s;
+  background-color: #066742;
+  border: 0;
+  color: #fff;
+}
+
+#registration .card .btn:hover {
+  background-color: #04492f;
+}
+
+#registration #registration-modal input,
+#registration #registration-modal select {
+  border-radius: 0;
+}
+
+#registration #registration-modal .btn {
+  font-size: 15px;
+  border-radius: 50px;
+  padding: 10px 40px;
+  transition: all 0.2s;
+  background-color: #066742;
+  border: 0;
+  color: #fff;
+}
+
+#registration #registration-modal .btn:hover {
+  background-color: #04492f;
+}
+
 
 /*--------------------------------------------------------------
 # Contact Section
