--- a/css/style.css
+++ b/css/style.css
@@ -488,14 +488,22 @@ body.mobile-nav-active #mobile-nav-toggle {
 #intro {
   width: 100%;
   height: 100vh;
-  background: url('https://res.cloudinary.com/shellmates-club/image/upload/v1641035907/bsides_site/Banner_firfnh.png')
+  background: url('https://res.cloudinary.com/shellmates-club/image/upload/v1641053284/bsides_site/Banner_i6pc5a.png')
     top center;
-    /* https://res.cloudinary.com/shellmates-club/image/upload/v1606911315/bsides_site/intro-bg-2_emnfda.png */
   background-size: cover;
   overflow: hidden;
   position: relative;
 }
 
+#intro:before {
+  content: "";
+  background: rgba(35, 31, 32, 0.6);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
 
 #intro .intro-container {
   position: absolute;
