--- a/lib/venobox/venobox.css
+++ b/lib/venobox/venobox.css
@@ -184,18 +184,18 @@ or at least read this note: http://i.imgur.com/7C0ws9e.gif
 
 .vbox-content{
     text-align: center;
-    float: left;
+    float: center;
     width: 100%;
     position: relative;
     overflow: hidden;
     padding: 20px 10px;
 }
 .vbox-container img{
-    max-width: 100%;
+    max-width: 65%;
     height: auto;
 }
 .figlio{
-    max-width: 100%;
+    max-width: 65%;
     text-align: initial;
     border: 8px solid rgba(255, 255, 255, 0.4);
 }
