--- a/css/style.css
+++ b/css/style.css
@@ -799,9 +799,9 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 30px;
 }
 
-/* #speakers .speaker img {
-  margin: -75px 0 0 0px;
-} */
+#speakers .speaker-container {
+  width: auto;
+}
 
 #speakers .speaker .details {
   background: rgba(35, 31, 32, 0.76);
@@ -816,15 +816,15 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #speakers .speaker .details h3 {
   color: #fff;
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 600;
   margin-bottom: 5px;
 }
 
 #speakers .speaker .details p {
   color: #fff;
-  font-size: 15px;
-  margin-bottom: 10px;
+  font-size: 12px;
+  margin-bottom: 8px;
   font-style: italic;
 }
 
@@ -1085,19 +1085,19 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 @keyframes right-animation {
   0% {
-    right: -50px;
+    left: 1300px;
   }
   25% {
-    right: 300px;
+    left: 950px;
   }
   50% {
-    right: 650px;
+    left: 650px;
   }
   75% {
-    right: 950px;
+    left: 300px;
   }
   100% {
-    right: 1300px;
+    left: -50px;
   }
 }
 
